fixed mobile layout issues

--- a/style.css
+++ b/style.css
@@ -114,19 +114,65 @@ figcaption {
     color: #000000;
     font-size: 150%;
 }
-@media only screen and (max-width: 64em) {
-    header {font-size: 125%; }
-    h1 {padding-top: 80px;}
-    h2 {font-size: 200%;}
-    p {font-size: 125%;}
-    ul {font-size: 125%;}
-    
+
+#loop {
+    display: none;
 }
+
+@media only screen and (max-width: 64em) {
+    header {
+        font-size: 125%;
+    }
+    h1 {
+        padding-top: 80px;
+    }
+    h2 {
+        font-size: 200%;
+    }
+    p {
+        font-size: 125%;
+    }
+    ul {
+        font-size: 125%;
+    }
+    #loop {
+        display: none;
+    }
+}
+
 @media only screen and (max-width: 37.5em) {
-    body {background-image: none; background-color: #817fb2; padding: 0;}
-    #wrapper {width: 100%; border-style: none; padding: 0;}
-    figure {display: none;}
-    #column a img {display: none;}
-    ul {width: 90%}
-    header {background-image: none; border-style: none; background-color: #31304F; border-radius: 0px; color: #ffd763;}
+    body {
+        background-image: none;
+        background-color: #817fb2;
+        padding: 0;
+        margin: 0;
+        margin-top: 0;
+    }
+    #wrapper {
+        width: 100%;
+        border-style: none;
+        padding: 0;
+    }
+    figure {
+        display: none;
+    }
+    #column a img {
+        display: none;
+    }
+    ul {
+        width: 90%
+    }
+    header {
+        background-image: none;
+        border-style: none;
+        border-radius: 0px;
+        color: #ffd763;
+        margin-top: 0;
+        background: none;
+    }
+    #loop {
+        display: block;
+        align-content: center;
+    }
+    #loop img {width: 100%; height: 100%}
 }
